[tool.poetry]
name = "edge-coloring"
version = "0.1.0"
description = "Demonstrate the Misra-Gries edge coloring algorithm with Neo4j"
authors = ["Nathan Smith <nsmith_piano@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
neo4j = "^5.28.0"
python-dotenv = "^1.0.0"
requests = "^2.0.0"
pandas = "^2.2.3"
lxml = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
